[gd_scene load_steps=22 format=3 uid="uid://d4h3brjh8eoak"]

[ext_resource type="Script" uid="uid://dxvvaeuefb73w" path="res://menus/options_menu.gd" id="1_5a0sy"]
[ext_resource type="PackedScene" uid="uid://cuneiert8cmjs" path="res://menus/scroll.tscn" id="1_prnvy"]
[ext_resource type="Texture2D" uid="uid://dieof4n4h87ev" path="res://assets/art/UI/Grabber_Off.png" id="2_kftxf"]
[ext_resource type="Texture2D" uid="uid://dakxhryfymt7f" path="res://assets/art/UI/Scroll_Base.png" id="2_vyep7"]
[ext_resource type="Texture2D" uid="uid://cubjnn6x33qqa" path="res://assets/art/UI/Grabber_On.png" id="3_663nc"]
[ext_resource type="Texture2D" uid="uid://nebwcmnc3koc" path="res://assets/art/UI/Slider_Full.png" id="4_hvj8k"]
[ext_resource type="LabelSettings" uid="uid://dsebf1ximwajw" path="res://assets/font/default_label.tres" id="4_vyep7"]
[ext_resource type="Texture2D" uid="uid://q2jp88iy3yj0" path="res://assets/art/UI/Slider_Empty.png" id="5_38txh"]
[ext_resource type="Texture2D" uid="uid://c1pcsoyb2dm88" path="res://assets/art/UI/CloseButton_Normal.png" id="6_38txh"]
[ext_resource type="Texture2D" uid="uid://b1qdycp22iqor" path="res://assets/art/UI/CloseButton_Pressed.png" id="7_5a0sy"]
[ext_resource type="Texture2D" uid="uid://bu5g0nvpes6mh" path="res://assets/art/UI/CloseButton_Hover.png" id="8_g5vgl"]
[ext_resource type="Texture2D" uid="uid://drlas0kkvw64a" path="res://assets/art/UI/Menu_Buttons/KeyBindings1.png" id="11_033dp"]
[ext_resource type="Texture2D" uid="uid://bo6wtjg5a8twh" path="res://assets/art/UI/Menu_Buttons/KeyBindings3.png" id="12_fpdr8"]
[ext_resource type="Texture2D" uid="uid://dqvubuyvvqwrc" path="res://assets/art/UI/Menu_Buttons/KeyBindings2.png" id="13_r103k"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_5a0sy"]
texture = ExtResource("4_hvj8k")
texture_margin_left = 3.0
texture_margin_top = 3.0
texture_margin_right = 3.0
texture_margin_bottom = 3.0
expand_margin_left = 3.0
expand_margin_top = 3.0
expand_margin_right = 3.0
expand_margin_bottom = 3.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_g5vgl"]
texture = ExtResource("5_38txh")
texture_margin_left = 3.0
texture_margin_top = 3.0
texture_margin_right = 3.0
texture_margin_bottom = 3.0
expand_margin_left = 3.0
expand_margin_top = 3.0
expand_margin_right = 3.0
expand_margin_bottom = 3.0

[sub_resource type="Theme" id="Theme_srb65"]
HSlider/icons/grabber = ExtResource("2_kftxf")
HSlider/icons/grabber_highlight = ExtResource("3_663nc")
HSlider/styles/grabber_area = SubResource("StyleBoxTexture_5a0sy")
HSlider/styles/grabber_area_highlight = SubResource("StyleBoxTexture_5a0sy")
HSlider/styles/slider = SubResource("StyleBoxTexture_g5vgl")

[sub_resource type="Animation" id="Animation_srb65"]
resource_name = "Menu_Close"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Options:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.03333336, 0.2666667, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_kftxf"]
resource_name = "Menu_Load"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Options:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.73333335, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_663nc"]
length = 0.001

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hvj8k"]
_data = {
&"Menu_Close": SubResource("Animation_srb65"),
&"Menu_Load": SubResource("Animation_kftxf"),
&"RESET": SubResource("Animation_663nc")
}

[node name="Options" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5a0sy")

[node name="Scroll_Base" type="Sprite2D" parent="."]
visible = false
position = Vector2(323, 178)
texture = ExtResource("2_vyep7")

[node name="Scroll" parent="." instance=ExtResource("1_prnvy")]
layout_mode = 1

[node name="Options" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GridContainer" type="GridContainer" parent="Options"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -154.0
offset_top = -87.0
offset_right = 112.0
offset_bottom = 47.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.2, 1.2)
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 2

[node name="Master" type="Label" parent="Options/GridContainer"]
layout_mode = 2
text = "Master"
label_settings = ExtResource("4_vyep7")
horizontal_alignment = 2

[node name="MasterSlider" type="HSlider" parent="Options/GridContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_vertical = 1
theme = SubResource("Theme_srb65")
max_value = 1.0
step = 0.01
value = 0.5

[node name="Music" type="Label" parent="Options/GridContainer"]
layout_mode = 2
text = "Music"
label_settings = ExtResource("4_vyep7")
horizontal_alignment = 2

[node name="MusicSlider" type="HSlider" parent="Options/GridContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_vertical = 1
theme = SubResource("Theme_srb65")
max_value = 1.0
step = 0.01
value = 0.5

[node name="SFX" type="Label" parent="Options/GridContainer"]
layout_mode = 2
text = "Sound Effects"
label_settings = ExtResource("4_vyep7")
horizontal_alignment = 2

[node name="SFXSlider" type="HSlider" parent="Options/GridContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_vertical = 1
theme = SubResource("Theme_srb65")
max_value = 1.0
step = 0.01
value = 0.5

[node name="Voice" type="Label" parent="Options/GridContainer"]
layout_mode = 2
text = "Voice"
label_settings = ExtResource("4_vyep7")
horizontal_alignment = 2

[node name="VoiceSlider" type="HSlider" parent="Options/GridContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_vertical = 1
theme = SubResource("Theme_srb65")
max_value = 1.0
step = 0.01
value = 0.5

[node name="Back_Button" type="TextureButton" parent="Options"]
layout_mode = 0
offset_left = 436.0
offset_top = 265.0
offset_right = 532.0
offset_bottom = 345.0
texture_normal = ExtResource("6_38txh")
texture_pressed = ExtResource("7_5a0sy")
texture_hover = ExtResource("8_g5vgl")

[node name="KeyBindings" type="TextureButton" parent="Options"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -176.0
offset_top = 37.0
offset_right = 76.0
offset_bottom = 169.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
texture_normal = ExtResource("11_033dp")
texture_pressed = ExtResource("12_fpdr8")
texture_hover = ExtResource("13_r103k")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_hvj8k")
}

[connection signal="pressed" from="Options/Back_Button" to="Options/Back_Button" method="_on_pressed"]
